--- a/package.json
+++ b/package.json
@@ -24,11 +24,9 @@
     "netlify-cms": "^2.3.1",
     "node-sass": "^4.11.0",
     "parcel-bundler": "^1.9.4",
-    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.4.1",
-    "react-helmet": "^5.2.0",
-    "uuid": "^3.2.1"
+    "react-helmet": "^5.2.0"
   },
   "keywords": [
     "gatsby"
@@ -36,16 +34,17 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "start": "npm run develop",
+    "start": "yarn develop",
     "clean": "rimraf .cache public",
-    "build": "npm run clean && gatsby build",
-    "develop": "npm run clean && gatsby develop",
+    "build": "yarn clean && gatsby build",
+    "develop": "yarn clean && gatsby develop",
     "serve": "gatsby serve",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
+    "lint": "eslint --fix src gatsby-config.js gatsby-node.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.15.3",
+    "eslint-plugin-prettier": "^3.0.1",
+    "prettier": "^1.16.4",
     "rimraf": "^2.6.2"
   }
 }
